# camtrap-detector

./: .env  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  build-opencv.sh  eslint.config.js  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  lint.yml  linux.yml  macos.yml  release.yml  windows.yml
src/: App.css  App.js  App.jsx  App.tsx  ExportDialog.css  ExportDialog.js  MyDropzone.js  ProgressDialog.js  TauriDropZone.js  api.js  api.ts  index.html  index.tsx  vite.config.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  megadetector.rs  structures.rs  utils.rs  yolo.rs
src-tauri/src/exports/: csv.rs  image.rs  json.rs  mod.rs
src-tauri/src/opencv_yolov5/: detections.rs  helpers.rs  main.rs  mod.rs  model.rs  model_ort.rs
src-tauri/src/util/: magic_image.rs  mod.rs
src-tauri/src/yolov5/: detections.rs  helpers.rs  mod.rs  model.rs
src-tauri/tests/fixtures/: ena.md.4.1.0.json
src/components/: ConfigDialog.tsx  ExportDialog.js  ExportDialog.jsx  ExportDialog.tsx  FolderSelectDialog.js  FolderSelectDialog.jsx  FolderSelectDialog.tsx  ProgressDialog.js  ProgressDialog.tsx  TauriDropZone.js  TauriDropZone.tsx
yolov5cv/: .dockerignore  Cargo.toml  Dockerfile
yolov5cv/src/: detections.rs  helpers.rs  lib.rs  main.rs  model.rs
yolov5onnxruntime/: Cargo.toml  build.rs
yolov5onnxruntime/.cargo/: config
yolov5onnxruntime/src/: lib.rs
