[package]
name = "app"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# [target.arm64-apple-darwin]
# rustflags = ["-C", "link-args=-weak_framework Metal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all", "updater"] }
pathdiff = "0.2.1"
csv = "1.1.6"
opencv-yolov5 = { git = "https://github.com/bencevans/rust-opencv-yolov5", rev = "03695538d52864d93908ad32f8956479e538a5e9" }
image = { version = "0.24.5", features = ["rgb"] }
imageproc = "0.23.0"
rayon = "1.6.1"
chug = "1.1.0"
img-parts = "0.3.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# Enables CUDA OpenCV support
cuda = ["opencv-yolov5/cuda"]
