[package]
name = "app"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# [target.arm64-apple-darwin]
# rustflags = ["-C", "link-args=-weak_framework Metal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
tauri = { version = "1.6.1", features = ["api-all"] }
pathdiff = "0.2.1"
csv = "1.3.0"
image = { version = "0.24.9", features = ["rgb", "rayon", "jpeg_rayon"] }
imageproc = "0.23.0"
rayon = "1.9.0"
chug = "1.1.0"
img-parts = "0.3.0"
tracing = "0.1.40"
ndarray = "0.15.6"
walkdir = "2.5.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-test = { version = "0.2.4", feature = ["no-env-filter"] }

[target.'cfg(target_os = "windows")'.dependencies.ort]
version = "2.0.0-rc.0"
features = ["download-binaries", "cuda", "tensorrt"]

[target.'cfg(target_os = "linux")'.dependencies.ort]
version = "2.0.0-rc.0"
features = ["download-binaries", "cuda", "tensorrt"]

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.0", features = ["download-binaries", "coreml"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# Enables Updater API
updater = ["tauri/updater"]
