[package]
name = "app"
version = "1.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# [target.arm64-apple-darwin]
# rustflags = ["-C", "link-args=-weak_framework Metal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
tauri = { version = "2.7.0", features = [] }
pathdiff = "0.2.2"
csv = "1.3.0"
image = { version = "0.25.6", features = ["rayon"] }
imageproc = "0.25.0"
rayon = "1.10.0"
chug = "1.1.0"
img-parts = "0.3.3"
tracing = { version = "0.1.40", features = ["log"] }
ndarray = "0.16.1"
walkdir = "2.5.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-test = { version = "0.2.5", feature = ["no-env-filter"] }
time = "0.3.41"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
once_cell = "1.17.2"

[target.'cfg(target_os = "windows")'.dependencies.ort]
version = "2.0.0-rc.9"
features = ["download-binaries", "directml"]

[target.'cfg(target_os = "linux")'.dependencies.ort]
version = "2.0.0-rc.9"
default-features = false
features = ["download-binaries", "half", "ndarray", "xnnpack"]

[target.'cfg(target_os = "macos")'.dependencies.ort]
version = "2.0.0-rc.9"
features = ["download-binaries", "coreml"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# Enables Updater API
# updater = ["tauri/updater"]
