[package]
name = "yolov5cv"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"], optional = true }
image = { version = "0.24.3", features = ["rgb"] }
imageproc = "0.23.0"
indicatif = { version = "0.17.0", optional = true }
opencv = { version = "0.73.0", default-features = false, features = ["dnn", "imgcodecs"] }
shellexpand = {version = "2.1.2", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["cli"]
cli = ["dep:shellexpand", "dep:clap", "dep:indicatif"]